Create basic HTML layout and initial getWeather function (currently logging in console).

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,39 @@
     <title>Weather App</title>
 </head>
 <body>
+    <div id="search-area" class="box">
+        <form class="search-form">
+        <input type="search" id="search-bar" name="search-bar">
+        <button id="search-button">Search</button>
+        </form>
+    </div>
     
+    <div id="main-area" class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <div id="hours" class="box">
+        <ul>
+            <li class="hour"></li>
+            <li class="hour"></li>
+            <li class="hour"></li>
+            <li class="hour"></li>
+            <li class="hour"></li>
+            <li class="hour"></li>
+            <li class="hour"></li>
+        </ul>
+    </div>
+    <div id="week" class="box">
+        <ul>
+            <li class="day"></li>
+            <li class="day"></li>
+            <li class="day"></li>
+            <li class="day"></li>
+            <li class="day"></li>
+            <li class="day"></li>
+            <li class="day"></li>
+        </ul>
+    </div>
 </body>
 </html>
