Add specific spots to the HTML layout in preparation for API call info. Also change the color scheme to dark mode.

--- a/src/template.html
+++ b/src/template.html
@@ -14,9 +14,36 @@
     </div>
     
     <div id="main-area" class="box">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div id="main-left">
+            <div id="name-holder">
+                <h1>San Francisco</h1>
+            </div>
+            <div id="symbol-holder"></div>
+        </div>
+        <div id="main-center">
+            <div id="temp-holder">
+                <h1 id="current-temp" class="temp">50 <span class="degree-symbol">°</span></h1>
+            </div>
+            <p id="conditions">Conditions</p>
+            <div id="high-low-holder">
+                <p>H: <span id="high"></span></p>
+                <p>L: <span id="low"></span></p>
+            </div>
+        </div>
+        <div id="main-right">
+            <div id="feels-like">
+                <h3>Feels Like: </h3><span></span>
+            </div>
+            <div id="humidity">
+                <h3>Humidity: </h3><span></span>
+            </div>
+            <div id="chance-of-rain">
+                <h3>Chance of Rain: </h3><span></span>
+            </div>
+            <div id="UV-index">
+                <h3>UV Index: </h3><span></span>
+            </div>
+        </div>
     </div>
     <div id="hours" class="box">
         <ul>
