Make functions to display the primary weather data on the page.

--- a/src/template.html
+++ b/src/template.html
@@ -16,13 +16,13 @@
     <div id="main-area" class="box">
         <div id="main-left">
             <div id="name-holder">
-                <h1>San Francisco</h1>
+                <h1 id="city-name">San Francisco</h1>
             </div>
             <div id="symbol-holder"></div>
         </div>
         <div id="main-center">
             <div id="temp-holder">
-                <h1 id="current-temp" class="temp">50 <span class="degree-symbol">°</span></h1>
+                <h1 class="temp"><span id="current-temp"></span><span class="degree-symbol">°</span></h1>
             </div>
             <p id="conditions">Conditions</p>
             <div id="high-low-holder">
@@ -31,17 +31,17 @@
             </div>
         </div>
         <div id="main-right">
-            <div id="feels-like">
-                <h3>Feels Like: </h3><span></span>
+            <div>
+                <h3>Feels Like: </h3><span id="feels-like"></span>
             </div>
-            <div id="humidity">
-                <h3>Humidity: </h3><span></span>
+            <div>
+                <h3>Humidity: </h3><span id="humidity"></span>
             </div>
-            <div id="chance-of-rain">
-                <h3>Chance of Rain: </h3><span></span>
+            <div>
+                <h3>Chance of Rain: </h3><span id="chance-of-rain"></span>
             </div>
-            <div id="UV-index">
-                <h3>UV Index: </h3><span></span>
+            <div>
+                <h3>UV Index: </h3><span id="UV-index"></span>
             </div>
         </div>
     </div>
