--- a/src/template.html
+++ b/src/template.html
@@ -26,8 +26,8 @@
             </div>
             <p id="conditions">Conditions</p>
             <div id="high-low-holder">
-                <p>H: <span id="high"></span></p>
-                <p>L: <span id="low"></span></p>
+                <p><span class="H-L">H: </span><span id="high"></span></p>
+                <p><span class="H-L">L: </span><span id="low"></span></p>
             </div>
         </div>
         <div id="main-right">
