Make the bubbled information look like bubbles.

--- a/src/template.html
+++ b/src/template.html
@@ -31,16 +31,16 @@
             </div>
         </div>
         <div id="main-right">
-            <div>
+            <div class="bubble">
                 <h3>Feels Like: </h3><span id="feels-like"></span>
             </div>
-            <div>
+            <div class="bubble">
                 <h3>Humidity: </h3><span id="humidity"></span>
             </div>
-            <div>
+            <div class="bubble">
                 <h3>Chance of Rain: </h3><span id="chance-of-rain"></span>
             </div>
-            <div>
+            <div class="bubble">
                 <h3>UV Index: </h3><span id="UV-index"></span>
             </div>
         </div>
