Make it so the icon is centered within the total empty space alongside the central text. Switch to CSS Grid for this, and insert a fourth div solely to give space for the absolutely positioned degree symbol.

--- a/src/template.html
+++ b/src/template.html
@@ -32,6 +32,7 @@
                 <p><span class="H-L">L: </span><span id="low"></span></p>
             </div>
         </div>
+        <div #id="spacer-column"></div>
         <div id="main-right">
             <div class="bubble">
                 <h3>Feels Like: </h3><span id="feels-like"></span>
