Get the HTML and CSS ready for the hourly check-in.

--- a/src/template.html
+++ b/src/template.html
@@ -28,8 +28,16 @@
             </div>
             <p id="conditions">Conditions</p>
             <div id="high-low-holder">
-                <p><span class="H-L">H: </span><span id="high"></span></p>
-                <p><span class="H-L">L: </span><span id="low"></span></p>
+                <p class="temp">
+                    <span class="H-L">H: </span>
+                    <span id="high"></span>
+                    <span class="degree-symbol">°</span>
+                </p>
+                <p class="temp">
+                    <span class="H-L">L: </span>
+                    <span id="low"></span>
+                    <span class="degree-symbol">°</span>
+                </p>
             </div>
         </div>
         <div #id="spacer-column"></div>
@@ -50,13 +58,90 @@
     </div>
     <div id="hours" class="box">
         <ul>
-            <li class="hour"></li>
-            <li class="hour"></li>
-            <li class="hour"></li>
-            <li class="hour"></li>
-            <li class="hour"></li>
-            <li class="hour"></li>
-            <li class="hour"></li>
+            <li class="hour">
+                <div class="time">
+                    <h4>1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temp">
+                    <span>50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour">
+                <div class="time">
+                    <h4>1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temp">
+                    <span>50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour">
+                <div class="time">
+                    <h4>1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temp">
+                    <span>50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour">
+                <div class="time">
+                    <h4>1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temp">
+                    <span>50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour">
+                <div class="time">
+                    <h4>1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temp">
+                    <span>50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour">
+                <div class="time">
+                    <h4>1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temp">
+                    <span>50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour">
+                <div class="time">
+                    <h4>1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temp">
+                    <span>50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
         </ul>
     </div>
     <div id="week" class="box">
