Adjust the classes regarding temperature holers for easier reading.

--- a/src/template.html
+++ b/src/template.html
@@ -24,20 +24,23 @@
         </div>
         <div id="main-center">
             <div id="temp-holder">
-                <h1 class="temp"><span id="current-temp"></span><span class="degree-symbol">°</span></h1>
+                <h1 class="temperature-holder">
+                    <span id="current-temp"></span>
+                    <span class="degree-symbol">°</span>
+                </h1>
             </div>
             <p id="conditions">Conditions</p>
             <div id="high-low-holder">
-                <p class="temp">
+                <div class="temperature-holder">
                     <span class="H-L">H: </span>
                     <span id="high"></span>
                     <span class="degree-symbol">°</span>
-                </p>
-                <p class="temp">
+                </div>
+                <div class="temperature-holder">
                     <span class="H-L">L: </span>
                     <span id="low"></span>
                     <span class="degree-symbol">°</span>
-                </p>
+                </div>
             </div>
         </div>
         <div #id="spacer-column"></div>
@@ -59,86 +62,86 @@
     <div id="hours" class="box">
         <ul>
             <li class="hour">
-                <div class="time">
-                    <h4>1:00</h4>
+                <div>
+                    <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
                     <img src="./icons/beanie.svg" alt="icon">
                 </div>
-                <div class="temp">
-                    <span>50</span>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
             <li class="hour">
-                <div class="time">
-                    <h4>1:00</h4>
+                <div>
+                    <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
                     <img src="./icons/beanie.svg" alt="icon">
                 </div>
-                <div class="temp">
-                    <span>50</span>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
             <li class="hour">
-                <div class="time">
-                    <h4>1:00</h4>
+                <div>
+                    <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
                     <img src="./icons/beanie.svg" alt="icon">
                 </div>
-                <div class="temp">
-                    <span>50</span>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
             <li class="hour">
-                <div class="time">
-                    <h4>1:00</h4>
+                <div>
+                    <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
                     <img src="./icons/beanie.svg" alt="icon">
                 </div>
-                <div class="temp">
-                    <span>50</span>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
             <li class="hour">
-                <div class="time">
-                    <h4>1:00</h4>
+                <div>
+                    <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
                     <img src="./icons/beanie.svg" alt="icon">
                 </div>
-                <div class="temp">
-                    <span>50</span>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
             <li class="hour">
-                <div class="time">
-                    <h4>1:00</h4>
+                <div>
+                    <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
                     <img src="./icons/beanie.svg" alt="icon">
                 </div>
-                <div class="temp">
-                    <span>50</span>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
             <li class="hour">
-                <div class="time">
-                    <h4>1:00</h4>
+                <div>
+                    <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
                     <img src="./icons/beanie.svg" alt="icon">
                 </div>
-                <div class="temp">
-                    <span>50</span>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
