--- a/src/template.html
+++ b/src/template.html
@@ -61,7 +61,7 @@
     </div>
     <div id="hours" class="box">
         <ul>
-            <li class="hour">
+            <li class="hour bubble">
                 <div>
                     <h4 class="time">1:00</h4>
                 </div>
@@ -73,7 +73,7 @@
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
-            <li class="hour">
+            <li class="hour bubble">
                 <div>
                     <h4 class="time">1:00</h4>
                 </div>
@@ -85,7 +85,7 @@
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
-            <li class="hour">
+            <li class="hour bubble">
                 <div>
                     <h4 class="time">1:00</h4>
                 </div>
@@ -97,7 +97,7 @@
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
-            <li class="hour">
+            <li class="hour bubble">
                 <div>
                     <h4 class="time">1:00</h4>
                 </div>
@@ -109,7 +109,7 @@
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
-            <li class="hour">
+            <li class="hour bubble">
                 <div>
                     <h4 class="time">1:00</h4>
                 </div>
@@ -121,7 +121,7 @@
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
-            <li class="hour">
+            <li class="hour bubble">
                 <div>
                     <h4 class="time">1:00</h4>
                 </div>
@@ -133,7 +133,7 @@
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
-            <li class="hour">
+            <li class="hour bubble">
                 <div>
                     <h4 class="time">1:00</h4>
                 </div>
