Get the days' HTML/CSS ready.

--- a/src/template.html
+++ b/src/template.html
@@ -149,13 +149,90 @@
     </div>
     <div id="week" class="box">
         <ul>
-            <li class="day"></li>
-            <li class="day"></li>
-            <li class="day"></li>
-            <li class="day"></li>
-            <li class="day"></li>
-            <li class="day"></li>
-            <li class="day"></li>
+            <li class="day bubble">
+                <div>
+                    <h4 class="weekday">Mon</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="day bubble">
+                <div>
+                    <h4 class="weekday">Mon</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="day bubble">
+                <div>
+                    <h4 class="weekday">Mon</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="day bubble">
+                <div>
+                    <h4 class="weekday">Mon</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="day bubble">
+                <div>
+                    <h4 class="weekday">Mon</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="day bubble">
+                <div>
+                    <h4 class="weekday">Mon</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="day bubble">
+                <div>
+                    <h4 class="weekday">Mon</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/beanie.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
         </ul>
     </div>
 </body>
