Create a comprehensive bug-handling UI. All errors will appear to the user under the search bar.

--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,13 @@
 <body>
     <div id="search-area" class="box">
         <form class="search-form">
-        <input type="search" id="search-bar" name="search-bar">
-        <button id="search-button">Search</button>
+        <div>
+            <input type="search" id="search-bar" name="search-bar">
+            <button id="search-button">Search</button>
+        </div>
+        <p id="errors" aria-live="polite"></p>
         </form>
+       
     </div>
     
     <div id="main-area" class="box">
