--- a/src/template.html
+++ b/src/template.html
@@ -23,7 +23,7 @@
                 <h1 id="city-name">San Francisco</h1>
             </div>
             <div id="icon-holder">
-                <img id="main-icon" src="./icons/beanie.svg" alt="icon">
+                <img id="main-icon" src="./icons/transparent.svg" alt="icon">
             </div>
         </div>
         <div id="main-center">
@@ -70,7 +70,7 @@
                     <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -82,7 +82,7 @@
                     <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -94,7 +94,7 @@
                     <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -106,7 +106,7 @@
                     <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -118,7 +118,7 @@
                     <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -130,7 +130,7 @@
                     <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -142,7 +142,7 @@
                     <h4 class="time">1:00</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -158,7 +158,7 @@
                     <h4 class="weekday">Mon</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -170,7 +170,7 @@
                     <h4 class="weekday">Mon</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -182,7 +182,7 @@
                     <h4 class="weekday">Mon</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -194,7 +194,7 @@
                     <h4 class="weekday">Mon</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -206,7 +206,7 @@
                     <h4 class="weekday">Mon</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -218,7 +218,7 @@
                     <h4 class="weekday">Mon</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
@@ -230,7 +230,7 @@
                     <h4 class="weekday">Mon</h4>
                 </div>
                 <div class="icon-holder">
-                    <img src="./icons/beanie.svg" alt="icon">
+                    <img src="./icons/transparent.svg" alt="icon">
                 </div>
                 <div class="temperature-holder">
                     <span class="temperature">50</span>
