Beginning to make a carousel, add 5 more hours to the ul, but change the CSS around to make it so only 7 show as before. The high-decimal rem is to match the exact pixels they were before, to the hundredths decimal. Why? Because you can't change perfection.

--- a/src/template.html
+++ b/src/template.html
@@ -149,6 +149,66 @@
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
+                        <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+                        <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+                        <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+                        <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+                        <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
         </ul>
     </div>
     <div id="week" class="box">
