--- a/src/template.html
+++ b/src/template.html
@@ -149,7 +149,7 @@
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
-                        <li class="hour bubble">
+            <li class="hour bubble">
                 <div>
                     <h4 class="time">1:00</h4>
                 </div>
@@ -161,7 +161,7 @@
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
-                        <li class="hour bubble">
+            <li class="hour bubble">
                 <div>
                     <h4 class="time">1:00</h4>
                 </div>
@@ -173,7 +173,7 @@
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
-                        <li class="hour bubble">
+            <li class="hour bubble">
                 <div>
                     <h4 class="time">1:00</h4>
                 </div>
@@ -185,7 +185,7 @@
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
-                        <li class="hour bubble">
+            <li class="hour bubble">
                 <div>
                     <h4 class="time">1:00</h4>
                 </div>
@@ -197,7 +197,151 @@
                     <span class="degree-symbol">°</span>
                 </div>
             </li>
-                        <li class="hour bubble">
+            <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour bubble">
+                <div>
+                    <h4 class="time">1:00</h4>
+                </div>
+                <div class="icon-holder">
+                    <img src="./icons/transparent.svg" alt="icon">
+                </div>
+                <div class="temperature-holder">
+                    <span class="temperature">50</span>
+                    <span class="degree-symbol">°</span>
+                </div>
+            </li>
+            <li class="hour bubble">
                 <div>
                     <h4 class="time">1:00</h4>
                 </div>
